fix(web-components): adds z-index value for toasts
adds z-index token to ensure toasts overlay other components

523

--- a/packages/web-components/src/components/ic-toast/ic-toast.css
+++ b/packages/web-components/src/components/ic-toast/ic-toast.css
@@ -1,5 +1,9 @@
 @import "../../global/normalize.css";
 
+/**
+ * @prop --ic-z-index-toast: z-index of toast
+ */
+
 :host {
   --bottom-position: var(--ic-space-xl);
 
@@ -8,6 +12,7 @@
   left: 50%;
   transform: translate(-50%);
   animation: fadein var(--ic-transition-duration-slow) ease-in-out;
+  z-index: var(--ic-z-index-toast);
 }
 
 :host(.hidden) {
